fix: key stats section on small screen sizes

--- a/www/tailwind.css
+++ b/www/tailwind.css
@@ -562,6 +562,10 @@ video {
   border-width: 0;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
 .fixed {
   position: fixed;
 }
@@ -641,11 +645,6 @@ video {
   margin-right: -0.75rem;
 }
 
-.mx-28 {
-  margin-left: 7rem;
-  margin-right: 7rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -711,10 +710,6 @@ video {
   margin-top: 1rem;
 }
 
-.mt-40 {
-  margin-top: 10rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -725,14 +720,6 @@ video {
 
 .mt-96 {
   margin-top: 24rem;
-}
-
-.mr-1 {
-  margin-right: 0.25rem;
-}
-
-.mr-10 {
-  margin-right: 2.5rem;
 }
 
 .block {
@@ -787,14 +774,6 @@ video {
   height: 100vh;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
 .min-h-screen {
   min-height: 100vh;
 }
@@ -829,70 +808,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-\[100\] {
-  width: 100;
-}
-
-.w-\[97\] {
-  width: 97;
-}
-
-.w-\[96\] {
-  width: 96;
-}
-
-.w-\[96rem\] {
-  width: 96rem;
-}
-
-.w-\[96px\] {
-  width: 96px;
-}
-
-.w-\[10px\] {
-  width: 10px;
-}
-
-.w-\[10rem\] {
-  width: 10rem;
-}
-
-.w-\[80rem\] {
-  width: 80rem;
-}
-
-.w-\[50rem\] {
-  width: 50rem;
-}
-
-.w-\[15rem\] {
-  width: 15rem;
-}
-
-.w-\[20rem\] {
-  width: 20rem;
-}
-
-.w-\[25rem\] {
-  width: 25rem;
-}
-
-.w-\[24rem\] {
-  width: 24rem;
-}
-
-.w-\[26rem\] {
-  width: 26rem;
 }
 
 .min-w-\[35\%\] {
@@ -980,10 +895,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-around {
-  justify-content: space-around;
 }
 
 .gap-0 {
@@ -1120,21 +1031,6 @@ video {
   background-color: rgb(242 242 242 / var(--tw-bg-opacity));
 }
 
-.bg-blue-3 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(54 171 217 / var(--tw-bg-opacity));
-}
-
-.bg-blue-4 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(48 191 191 / var(--tw-bg-opacity));
-}
-
-.bg-gray-1 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(46 52 63 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-60 {
   --tw-bg-opacity: 0.6;
 }
@@ -1250,30 +1146,12 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.pt-0 {
-  padding-top: 0px;
-}
-
 .pt-20 {
   padding-top: 5rem;
 }
 
 .pt-32 {
   padding-top: 8rem;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
 }
 
 .text-center {
@@ -1464,6 +1342,10 @@ html, body {
     margin-left: 1.25rem;
   }
 
+  .sm\:hidden {
+    display: none;
+  }
+
   .sm\:max-w-sm {
     max-width: 24rem;
   }
@@ -1494,6 +1376,10 @@ html, body {
 }
 
 @media (min-width: 768px) {
+  .md\:visible {
+    visibility: visible;
+  }
+
   .md\:my-44 {
     margin-top: 11rem;
     margin-bottom: 11rem;
@@ -1539,6 +1425,10 @@ html, body {
 }
 
 @media (min-width: 1024px) {
+  .lg\:visible {
+    visibility: visible;
+  }
+
   .lg\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -1556,6 +1446,14 @@ html, body {
     margin-right: 6rem;
   }
 
+  .lg\:mr-8 {
+    margin-right: 2rem;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:flex {
     display: flex;
   }
@@ -1566,6 +1464,10 @@ html, body {
 
   .lg\:w-4 {
     width: 1rem;
+  }
+
+  .lg\:w-3\/5 {
+    width: 60%;
   }
 
   .lg\:max-w-7xl {
